Update iptables rules for Centos5

--- a/modules/iptables/templates/iptables_centos5.erb
+++ b/modules/iptables/templates/iptables_centos5.erb
@@ -25,6 +25,7 @@
 -A RH-Firewall-1-INPUT -s 50.56.233.39 -j ACCEPT
 -A RH-Firewall-1-INPUT -s 99.6.134.147 -j ACCEPT
 -A RH-Firewall-1-INPUT -s 24.7.21.9 -j ACCEPT
+-A RH-Firewall-1-INPUT -s 50.57.74.121 -j ACCEPT
 -A RH-Firewall-1-INPUT -i lo -j ACCEPT
 -A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
 -A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
