--- a/modules/iptables/templates/iptables_centos6.erb
+++ b/modules/iptables/templates/iptables_centos6.erb
@@ -25,7 +25,7 @@
 -A RH-Firewall-1-INPUT -s 10.179.122.33 -j ACCEPT -m comment --comment "adm1 Internal"
 -A RH-Firewall-1-INPUT -s 10.179.122.34 -j ACCEPT -m comment --comment "adm2 Internal"
 -A RH-Firewall-1-INPUT -s 50.57.105.22 -j ACCEPT -m comment --comment "ltcontrollers.snaplogic.com"
--A RH-Firewall-1-INPUT -s 99.6.134.147 -j ACCEPT -m comment --comment "Ricardo's Home"
+-A RH-Firewall-1-INPUT -s 99.6.132.0/22 -j ACCEPT -m comment --comment "Ricardo's Home"
 -A RH-Firewall-1-INPUT -s 24.7.21.9 -j ACCEPT -m comment --comment "Martin's Home"
 -A RH-Firewall-1-INPUT -s 50.57.74.121 -j ACCEPT -m comment --comment "puppet.eng.snaplogic.com"
 -A RH-Firewall-1-INPUT -s 50.57.85.55 -j ACCEPT -m comment --comment "nagios.eng.snaplogic.com"
@@ -38,6 +38,11 @@
 -A RH-Firewall-1-INPUT -s 50.57.226.252 -j ACCEPT -m comment --comment "qaauto6.eng.snaplogic.com"
 -A RH-Firewall-1-INPUT -s 50.57.220.251 -j ACCEPT -m comment --comment "qaauto7.eng.snaplogic.com"
 -A RH-Firewall-1-INPUT -s 50.57.220.20 -j ACCEPT -m comment --comment "qaauto8.eng.snaplogic.com"
+-A RH-Firewall-1-INPUT -s 50.57.105.22 -j ACCEPT -m comment --comment "ltcontroller.snaplogic.com"
+-A RH-Firewall-1-INPUT -s 209.114.38.148 -j ACCEPT -m comment --comment "livedev.eng.snaplogic.com"
+-A RH-Firewall-1-INPUT -s 174.143.142.103 -j ACCEPT -m comment --comment "forge1.snaplogic.com"
+-A RH-Firewall-1-INPUT -s 173.203.237.144 -j ACCEPT -m comment --comment "forge2.snaplogic.com"
+-A RH-Firewall-1-INPUT -s 76.126.244.86 -j ACCEPT -m comment --comment "Shashi's home"
 -A RH-Firewall-1-INPUT -i lo -j ACCEPT
 -A RH-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
 -A RH-Firewall-1-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
