--- a/modules/openldap/templates/etc/ldap.conf.erb
+++ b/modules/openldap/templates/etc/ldap.conf.erb
@@ -293,7 +293,7 @@ nss_initgroups_ignoreusers root,ldap,named,avahi,haldaemon,dbus,radvd,tomcat,rad
 # SASL mechanism for PAM authentication - use is experimental
 # at present and does not support password policy control
 #pam_sasl_mech DIGEST-MD5
-uri ldap://adm1.rsc.snaplogic.com
+uri ldaps://adm1.rsc.snaplogic.com
 #ssl no
 #ssl on
 TLS_REQCERT allow
